[gd_scene load_steps=9 format=2]

[ext_resource path="res://Boat/GUI.gd" type="Script" id=1]
[ext_resource path="res://Boat/Boat.gd" type="Script" id=2]
[ext_resource path="res://Boat/Boat.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.5, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Boat" type="RigidBody2D"]
position = Vector2( 189, 906 )
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
smoothing_enabled = true
editor_draw_limits = true

[node name="GUI" type="Node2D" parent="Camera2D"]
script = ExtResource( 1 )

[node name="CloseButton" type="Button" parent="Camera2D/GUI"]
margin_left = -950.0
margin_top = -530.0
margin_right = -915.0
margin_bottom = -505.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiniMap" type="Sprite" parent="Camera2D/GUI"]
position = Vector2( 808, -388 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -0.5 )
rotation = 1.5708
frames = SubResource( 5 )
frame = 1
speed_scale = 0.5
playing = true

[connection signal="body_entered" from="." to="." method="_on_Boat_body_entered"]
[connection signal="pressed" from="Camera2D/GUI/CloseButton" to="." method="_on_CloseButton_pressed"]
